Bug #3292 - fix too long filenames

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@
     /*position: relative;*/
 }
 
+.path-local-downloadcenter form .fitemtitle label,
 .path-local-downloadcenter form .itemtitle span {
     max-width: 210px;
     overflow: hidden;
